src/objects/c2g__WorkerLog__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpworkerlog</customHelpPage>
    <fields>
        <fullName>c2g__IsLastRun__c</fullName>
        <defaultValue>true</defaultValue>
        <description>True if the object represents the most recent batch run.</description>
        <label>Is Last Run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Journal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Journal</label>
        <referenceTo>c2g__codaJournal__c</referenceTo>
        <relationshipLabel>Worker Logs</relationshipLabel>
        <relationshipName>WorkerLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__LogType__c</fullName>
        <label>Log Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                    <default>true</default>
                    <label>Error</label>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Abort</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__PurchaseCreditNote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payable Credit Note</label>
        <referenceTo>c2g__codaPurchaseCreditNote__c</referenceTo>
        <relationshipLabel>Worker Logs</relationshipLabel>
        <relationshipName>WorkerLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PurchaseInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payable Invoice</label>
        <referenceTo>c2g__codaPurchaseInvoice__c</referenceTo>
        <relationshipLabel>Worker Logs</relationshipLabel>
        <relationshipName>WorkerLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SalesCreditNote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Credit Note</label>
        <referenceTo>c2g__codaCreditNote__c</referenceTo>
        <relationshipLabel>Worker Logs</relationshipLabel>
        <relationshipName>WorkerLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SalesInvoiceLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Invoice Line Item</label>
        <referenceTo>c2g__codaInvoiceLineItem__c</referenceTo>
        <relationshipLabel>Worker Logs</relationshipLabel>
        <relationshipName>WorkerLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SalesInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Invoice</label>
        <referenceTo>c2g__codaInvoice__c</referenceTo>
        <relationshipLabel>Worker Logs</relationshipLabel>
        <relationshipName>WorkerLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__WorkerLogGroup__c</fullName>
        <label>Worker Log Group</label>
        <referenceTo>c2g__WorkerLogGroup__c</referenceTo>
        <relationshipLabel>Worker Logs</relationshipLabel>
        <relationshipName>WorkerLogs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Worker Log</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__SalesInvoice__c</columns>
        <columns>c2g__SalesCreditNote__c</columns>
        <columns>c2g__Journal__c</columns>
        <columns>c2g__Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Worker Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Worker Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>